update env variable to match jira tokens

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Confluence API credentials
-CONFLUENCE_URL=https://your-domain.atlassian.net/wiki
-CONFLUENCE_API_KEY=your-api-key
-CONFLUENCE_USER_EMAIL=your-email@example.com
+JIRA_BASE_URL=https://your-domain.atlassian.net/wiki
+JIRA_API_TOKEN=your-api-key
+JIRA_API_USER=your-email@example.com
 
 # Server configuration
 HOST=0.0.0.0
