--- a/src/.env.example
+++ b/src/.env.example
@@ -1,7 +1,7 @@
 # Confluence API settings
-CONFLUENCE_URL=https://your-domain.atlassian.net
-CONFLUENCE_API_KEY=your-api-key
-CONFLUENCE_USER_EMAIL=your-email@example.com
+JIRA_BASE_URL=https://your-domain.atlassian.net
+JIRA_API_TOKEN=your-api-key
+JIRA_API_USER=your-email@example.com
 
 # Server settings
 HOST=0.0.0.0
