--- a/.env.test.local
+++ b/.env.test.local
@@ -1,6 +1,6 @@
-CONFLUENCE_URL=https://test-confluence.atlassian.net
-CONFLUENCE_API_KEY=test-api-key
-CONFLUENCE_USER_EMAIL=test@example.com
+JIRA_BASE_URL=https://test-confluence.atlassian.net
+JIRA_API_TOKEN=test-api-key
+JIRA_API_USER=test@example.com
 DEBUG=true
 HOST=localhost
 PORT=3000
